--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -390,6 +390,10 @@ section {
   color: #1f5297;
 }
 
+.facts ul li {
+  padding-bottom: 10px;
+}
+
 /*--------------------------------------------------------------
 # Akills
 --------------------------------------------------------------*/
