--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -593,6 +593,10 @@ section {
 /*--------------------------------------------------------------
 # Services
 --------------------------------------------------------------*/
+.services {
+  padding-bottom: 130px;
+}
+
 .services .icon-box {
   margin-bottom: 20px;
 }
