--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -392,7 +392,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Akills
+# Skills
 --------------------------------------------------------------*/
 .skills .progress {
   height: 50px;
@@ -574,3 +574,13 @@ section {
     padding-right: 20px 15px;
   }
 }
+
+/*--------------------------------------------------------------
+# Donload
+--------------------------------------------------------------*/
+.download {
+  height: 50px;
+  display: block;
+  background: none;
+}
+
