--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -579,6 +579,7 @@ section {
 # Donload
 --------------------------------------------------------------*/
 .download {
+  padding: 0 0 20px 20px;
   height: 50px;
   display: block;
   background: none;
