--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,7 +180,8 @@ h1, h2, h3, h4, h5, h6 {
   top: 15px;
   z-index: 9998;
   border: 0;
-  background: white;
+  background: #149ddd;
+  color: #fff;
   font-size: 24px;
   transition: all 0.4s;
   outline: none !important;
