--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,29 +29,22 @@ h1, h2, h3, h4, h5, h6 {
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
-.back-to-top {
+#btn-back-to-top {
   position: fixed;
-  visibility: hidden;
-  opacity: 0;
-  right: 15px;
-  bottom: 15px;
-  z-index: 996;
-  background: #149ddd;
-  width: 40px;
-  height: 40px;
-  border-radius: 50px;
-  transition: all 0.4s;
+  bottom: 20px;
+  right: 20px;
+  display: none;
 }
-.back-to-top i {
+.btn-back-to-top i {
   font-size: 28px;
   color: #fff;
   line-height: 0;
 }
-.back-to-top:hover {
+.btn-back-to-top:hover {
   background: #2eafec;
   color: #fff;
 }
-.back-to-top.active {
+.btn-back-to-top.active {
   visibility: visible;
   opacity: 1;
 }
